tests/parser/errors/when.rv
when value 

when value {
    int => print "oui" float => 
}

when value {
    int 1 + 1
}

when value {


